[package]
name = "vt"
version = "0.2.0"
description = "Rust bindings for Linux virtual terminal APIs."
authors = ["Marco Cameriero <me@marcocameriero.net>"]
edition = "2018"
repository = "https://github.com/95ulisse/vt-rs"
homepage = "https://github.com/95ulisse/vt-rs"
license = "MIT"
readme = "Readme.md"

[dependencies]
nix = "0.15.0"
bitflags = "1.1.0"
